--- a/edu.uwb.opensubspace/scripts/readme
+++ b/edu.uwb.opensubspace/scripts/readme
@@ -4,6 +4,8 @@ Date:   2/10/2013
 
 To run the scripts remotely while logged off use the following command:
 
-	nohup sh scypt-name.sh 2> nohup.err < /dev/null &
+	nohup sh scipt-name.sh 2> nohup.err < /dev/null &
 
 Then you don't have to maintain your ssh session in order for the script to continue running.
+
+If you don't want to call the script using 'sh script-name' then you can make the script executable using 
