--- a/edu.uwb.opensubspace/readme
+++ b/edu.uwb.opensubspace/readme
@@ -9,3 +9,14 @@ Müller E., Günnemann S., Assent I., Seidl T.:
 Evaluating Clustering in Subspace Projections of High Dimensional Data
 http://dme.rwth-aachen.de/OpenSubspace/
 In Proc. 35th International Conference on Very Large Data Bases (VLDB 2009), Lyon, France. (2009) 
+
+
+If you want to check out the Evaluator (it's a runnable jar file in the main folder of the project) you can run it from the command line with
+
+java -jar Evaluator.jar
+
+This should spit out a help message that tells you what arguments to pass in order to run an evaluation of an algorithm on a given data set. For example,
+
+java -Xmx1024m -jar evaluator.jar -sc Secp -t Databases/synth_dbsizescale/S1500.arff -T Databases/synth_dbsizescale/S1500.true -c last -M Accuracy:CE:ClusterDistribution:Coverage:Entropy:F1Measure:RNIA -timelimit 30 -a 0.05 -b 0.3 -w 100 -e 0.01 -m 0 -n 0 -s 0.5 -x true 
+
+Will run SEPC on one of the synthetic data sets and calculate all of the metrics (the results are going to be written to standard out).
