--- a/edu.uwb.opensubspace/scripts/readme
+++ b/edu.uwb.opensubspace/scripts/readme
@@ -28,3 +28,5 @@ chmod +x script-name
 
 Useful for copying files to/from the server. A little easier than ftp.
 scp mineclus-real.sh hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/scripts
+
+scp hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/output/Sarc-real . 
