--- a/edu.uwb.opensubspace/scripts/readme
+++ b/edu.uwb.opensubspace/scripts/readme
@@ -27,6 +27,8 @@ If you don't want to call the script using 'sh script-name' then you can make th
 chmod +x script-name
 
 Useful for copying files to/from the server. A little easier than ftp.
-scp mineclus-real.sh hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/scripts
+scp sepc-synth-norm.sh hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/scripts
 
 scp hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/output/Sarc-real . 
+
+scp evaluator.jar hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.opensubspace/
