--- a/edu.uwb.opensubspace/scripts/readme
+++ b/edu.uwb.opensubspace/scripts/readme
@@ -38,7 +38,7 @@ scp clique-real.sh hunnd@uw1-320-lab.uwb.edu:/net/metis/home2/hunnd/edu.uwb.open
 Improvements
 ------------
 Ditch the shell scripts. Write a java program that will take a clusterer class 
-name and a string of arfuments and launch a process. Also, look into using
+name and a string of arguments and launch a process. Also, look into using
 parameter tuning functionality built into OpenSubspace. They have a nice 
 parameter tuning feature in the GUI, so, you just need to find it and see
-how to adapt it (if necesary).
+how to adapt it (if necessary).
